Create login activity screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,4 +4,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp">
+
+        <Button
+            android:text="@string/login_tab"
+            android:textSize="13pt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="220dp"
+            android:layout_marginLeft="15dp" />
+
+        <Button
+            android:text="@string/signup_tab"
+            android:textSize="13pt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="220dp"
+            android:onClick="onSignUpTabClick" />
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textview_login_email"
+        android:text="@string/email"
+        android:textSize="15pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="175dp" />
+
+    <EditText
+        android:id="@+id/edittext_login_email"
+        android:inputType="textEmailAddress"
+        android:hint="@string/hint_email"
+        android:textSize="13pt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_below="@id/textview_login_email" />
+
+    <TextView
+        android:id="@+id/textview_login_password"
+        android:text="@string/password"
+        android:textSize="15pt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="25dp"
+        android:layout_below="@id/edittext_login_email" />
+
+    <EditText
+        android:id="@+id/edittext_login_password"
+        android:inputType="textPassword"
+        android:hint="@string/hint_password"
+        android:textSize="13pt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_below="@id/textview_login_password" />
+
+    <Button
+        android:text="@string/login"
+        android:textSize="15pt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="75dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginRight="125dp"
+        android:layout_below="@id/edittext_login_password"
+        android:onClick="onLoginClick" />
 </RelativeLayout>
