--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -15,8 +15,10 @@
 
     <EditText
         android:id="@+id/edittext_new_item_name"
+        android:inputType="textLongMessage"
         android:hint="@string/hint_item_name"
         android:textSize="15pt"
+        android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
@@ -24,28 +26,15 @@
         android:layout_marginTop="75dp"
         android:layout_below="@id/textview_add_item" />
 
-    <RelativeLayout
+    <Button
+        android:text="@string/add_text"
+        android:textSize="13pt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="125dp"
+        android:layout_marginRight="125dp"
         android:layout_marginTop="125dp"
-        android:layout_below="@id/edittext_new_item_name">
-
-        <Button
-            android:text="@string/add_text"
-            android:textSize="13pt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="220dp"
-            android:layout_marginLeft="15dp"
-            android:onClick="onAddNewItemClick" />
-
-        <Button
-            android:text="@string/cancel_text"
-            android:textSize="13pt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="220dp"
-            android:onClick="onCancelNewItemClick" />
-    </RelativeLayout>
+        android:layout_below="@id/edittext_new_item_name"
+        android:onClick="onAddNewItemClick" />
 </RelativeLayout>
