--- a/app/src/main/res/layout/activity_edit_todo.xml
+++ b/app/src/main/res/layout/activity_edit_todo.xml
@@ -15,8 +15,10 @@
 
     <EditText
         android:id="@+id/edittext_edit_todo_name"
+        android:inputType="textLongMessage"
         android:hint="@string/hint_edit_todo_name"
         android:textSize="15pt"
+        android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
@@ -60,15 +62,4 @@
             android:layout_marginLeft="220dp"
             android:onClick="onDeleteTodoClick" />
     </RelativeLayout>
-
-    <Button
-        android:text="@string/cancel_text"
-        android:textSize="13pt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="200dp"
-        android:layout_below="@id/edittext_edit_todo_name"
-        android:onClick="onCancelEditTodoClick" />
 </RelativeLayout>
