--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,6 +41,7 @@
         android:inputType="textEmailAddress"
         android:hint="@string/hint_email"
         android:textSize="10pt"
+        android:imeOptions="actionNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
@@ -59,8 +60,10 @@
 
     <EditText
         android:id="@+id/edittext_signup_username"
+        android:inputType="textPersonName"
         android:hint="@string/hint_username"
         android:textSize="10pt"
+        android:imeOptions="actionNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="25dp"
@@ -82,6 +85,7 @@
         android:inputType="textPassword"
         android:hint="@string/hint_password"
         android:textSize="10pt"
+        android:imeOptions="actionNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
@@ -103,6 +107,7 @@
         android:inputType="textPassword"
         android:hint="@string/hint_password"
         android:textSize="10pt"
+        android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
