--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_add_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textview_add_item"
         android:text="@string/add_item"
         android:textSize="20pt"
+        android:typeface="serif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -18,23 +20,25 @@
         android:inputType="textLongMessage"
         android:hint="@string/hint_item_name"
         android:textSize="15pt"
+        android:typeface="serif"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="150dp"
         android:layout_below="@id/textview_add_item" />
 
     <Button
         android:text="@string/add_text"
         android:textSize="13pt"
+        android:typeface="serif"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="125dp"
         android:layout_marginRight="125dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="175dp"
         android:layout_below="@id/edittext_new_item_name"
         android:onClick="onAddNewItemClick" />
 </RelativeLayout>
