--- a/app/src/main/res/layout/activity_edit_item.xml
+++ b/app/src/main/res/layout/activity_edit_item.xml
@@ -2,15 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_edit_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textview_edit_item"
         android:text="@string/edit_item"
         android:textSize="20pt"
+        android:typeface="serif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -18,18 +20,20 @@
         android:inputType="textLongMessage"
         android:hint="@string/hint_edit_item_name"
         android:textSize="15pt"
+        android:typeface="serif"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="150dp"
         android:layout_below="@id/textview_edit_item" />
 
     <CheckBox
         android:id="@+id/checkbox_edit_item_done"
         android:text="@string/done"
         android:textSize="13pt"
+        android:typeface="serif"
         android:layoutDirection="rtl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,12 +45,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
+        android:layout_marginTop="175dp"
         android:layout_below="@id/edittext_edit_item_name">
 
         <Button
             android:text="@string/edit_text"
             android:textSize="13pt"
+            android:typeface="serif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="220dp"
@@ -56,6 +61,7 @@
         <Button
             android:text="@string/delete_text"
             android:textSize="13pt"
+            android:typeface="serif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
