Adjust screen decorations

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,10 +14,12 @@
             android:text="@string/login_tab"
             android:textSize="13pt"
             android:typeface="serif"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="220dp"
-            android:layout_marginLeft="15dp" />
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp" />
 
         <Button
             android:text="@string/signup_tab"
