--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,10 +24,12 @@
             android:text="@string/signup_tab"
             android:textSize="13pt"
             android:typeface="serif"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
-            android:layout_marginLeft="220dp" />
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="5dp" />
     </RelativeLayout>
 
     <TextView
